Themes: Fix Current Theme and Banner z-index

--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -142,7 +142,7 @@
 
 .banner.is-theme-showcase-banner {
 	@include banner-dark();
-
 	margin-top: 15px;
 	margin-bottom: 15px;
+	z-index: z-index( 'root', '.banner.is-theme-showcase-banner' );
 }
